log_output/ex1.10/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-deployment
spec:
  selector:
    matchLabels:
      app: log-output
  replicas: 1
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-image
          emptyDir:
            medium: ""
      containers:
        - name: log-output-reader-container
          image: santlemp/log_output:reader-1
          volumeMounts:
            - mountPath: /shared-data
              name: shared-image

        - name: log-output-writer-container
          image: santlemp/log_output:writer-1
          volumeMounts:
            - mountPath: /shared-data
              name: shared-image
